SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_cart__c/Buyer_s_cart__c.object-meta.xml
<CustomObject>
    <label>Buyer&#39;s cart</label>
    <nameField>
        <label>Buyer&#39;s cart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer&#39;s carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>