SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_cart__c/fields/Cart_status__c.field-meta.xml
<CustomField>
    <fullName>Cart_status__c</fullName>
    <label>Cart status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cart</fullName>
            </value>
            <value>
                <fullName>submitted</fullName>
            </value>
            <value>
                <fullName>processed</fullName>
            </value>
            <value>
                <fullName>shipped</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>