SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_cart__c/fields/CartID__c.field-meta.xml
<CustomField>
    <fullName>CartID__c</fullName>
    <displayFormat>CID-{0000}</displayFormat>
    <label>CartID</label>
    <type>AutoNumber</type>
</CustomField>