SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_cart__c/fields/Total_product_names__c.field-meta.xml
<CustomField>
    <fullName>Total_product_names__c</fullName>
    <label>Total product names</label>
    <summaryForeignKey>Buyer_s_order_item__c.Buyer_s_cart_related__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>