SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_cart__c/fields/Total_products_number__c.field-meta.xml
<CustomField>
    <fullName>Total_products_number__c</fullName>
    <label>Total products number</label>
    <summarizedField>Buyer_s_order_item__c.Product_quantity__c</summarizedField>
    <summaryForeignKey>Buyer_s_order_item__c.Buyer_s_cart_related__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>